# vault-tasks

./: .envrc  .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix
.config/: cli.toml  config.json5  config.toml  core.toml  tui.toml
.github/workflows/: bump.yml  cd.yml  ci.yml  release.yml
desktop/: vault-tasks-tui.desktop  vault-tasks.desktop
examples/: demo_calendar.tape  demo_explorer.tape  demo_filter.tape  demo_full.tape  demo_full.webm  demo_readme.tape  demo_time.tape  justfile  screenshots.tape  vault-tasks.tape  vault-tasks.webm
misc/: ics_to_md.py
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  core.rs  errors.rs  file_entry.rs  main.rs  parser.rs  scanner.rs  task.rs  task_core.rs  time_management.rs  tui.rs  vault_parser.rs  widgets.rs
src/components/: calendar_tab.rs  explorer.rs  explorer_tab.rs  filter_tab.rs  fps.rs  home.rs  menu.rs  tags.rs  task_list.rs  time_management_tab.rs  timeline_tab.rs
src/components/explorer_tab/: aux.rs  entry_list.rs  utils.rs
src/components/snapshots/: vault_tasks__components__explorer_tab__tests__move_explorer_tab_component-2.snap  (+11 more)
src/core/: date.rs  filter.rs  parser.rs  sorter.rs  task.rs  tracker.rs  vault_data.rs  vault_parser.rs
src/parser/: file_entry.rs  mod.rs  parser_due_date.rs  parser_file_entry.rs  parser_priorities.rs  parser_state.rs  parser_tags.rs  parser_task.rs  parser_time.rs  task.rs  token.rs
src/task_core/: config.rs  file_entry.rs  filter.rs  parser.rs  sorter.rs  task.rs  vault_data.rs  vault_parser.rs
src/time_management/: flow_time.rs  pomodoro.rs  time_management_technique.rs
src/widgets/: .task_list.rs.swp  file_data.rs  file_data_item.rs  help_menu.rs  input_bar.rs  search_bar.rs  styled_calendar.rs  task.rs  task_list.rs  task_list_item.rs  timer.rs
test-vault/: 150kb.md  150kb_2.md  chocolate_lava_cake.md  daily_workout.md  diy_bookshelf.md  example_physics_class.md  example_vault-tasks_project.md  generate_test_file.py  habit.md  study_plan.md  test.aaa  test.md
test-vault-2/: test.md
test-vault/dir/: test_0.md
test-vault/test/: test.md  test2.md  test3.md
test-vaults/vault-2/: note.md
vault-tasks/: CHANGELOG.md  Cargo.toml
vault-tasks-cli/: Cargo.toml
vault-tasks-cli/src/: cli.rs  config.rs  errors.rs  main.rs
vault-tasks-core/: CHANGELOG.md  Cargo.toml
vault-tasks-core/.config/: core.toml
vault-tasks-core/src/: config.rs  date.rs  filter.rs  lib.rs  logging.rs  parser.rs  sorter.rs  task.rs  tmp_refactor.rs  tracker.rs  vault_data.rs  vault_parser.rs
vault-tasks-core/src/parser/: parser_date.rs  parser_file_entry.rs  parser_time.rs  task.rs  tracker.rs
vault-tasks-core/src/parser/snapshots/: vault_tasks__core__parser__parser_file_entry__tests__nested_tasks_desc.snap  vault_tasks_core__parser__parser_file_entry__tests__code_block_task.snap  vault_tasks_core__parser__parser_file_entry__tests__commented_task.snap  vault_tasks_core__parser__parser_file_entry__tests__insert_global_tag.snap  vault_tasks_core__parser__parser_file_entry__tests__nested_tasks_desc.snap
vault-tasks-core/src/parser/task/: parse_completion.rs  parse_today.rs  parser_due_date.rs  parser_priorities.rs  parser_state.rs  parser_tags.rs  token.rs
vault-tasks-core/src/parser/tracker/: parse_frequency.rs
vault-tasks-core/src/snapshots/: vault_tasks__core__sorter__tests__task_sort_by_due_date.snap  vault_tasks_core__sorter__tests__task_sort_by_due_date.snap  vault_tasks_core__sorter__tests__task_sort_by_name.snap
vault-tasks-core/src/tracker/: frequency.rs  tracker_category.rs
vault-tasks-gui/src-tauri/: Cargo.toml  tauri.conf.json
vault-tasks-gui/src-tauri/src/: main.rs
vault-tasks-tui/: CHANGELOG.md  Cargo.toml  build.rs
vault-tasks-tui/src/: app.rs  cli.rs  config.rs  errors.rs  logging.rs  main.rs  tui.rs  widgets.rs
vault-tasks-tui/src/components/: calendar_tab.rs  explorer_tab.rs  filter_tab.rs  fps.rs  home.rs  time_management_tab.rs
vault-tasks-tui/src/components/explorer_tab/: entry_list.rs  utils.rs
vault-tasks-tui/src/components/snapshots/: vault_tasks_tui__components__home__tests__render_home_component.snap  vault_tasks_tui__components__home__tests__render_home_component.snap.new
vault-tasks-tui/src/core/: vault_parser.rs
vault-tasks-tui/src/core/parser/: tracker.rs
vault-tasks-tui/src/core/parser/snapshots/: vault_tasks__core__parser__parser_file_entry__tests__insert_global_tag.snap  vault_tasks_core__parser__parser_file_entry__tests__nested_tasks_desc.snap
vault-tasks-tui/src/core/parser/task/: parse_completion.rs  parser_priorities.rs  parser_state.rs  parser_tags.rs
vault-tasks-tui/src/core/snapshots/: vault_tasks_core__sorter__tests__task_sort_by_name.snap  vault_tasks_core__sorter__tests__task_sort_states.snap
vault-tasks-tui/src/time_management/: flow_time.rs  time_management_technique.rs
vault-tasks-tui/src/widgets/: help_menu.rs  input_bar.rs  task_list.rs  task_list_item.rs  task_list_state.rs
vault-tasks-tui/src/widgets/snapshots/: vault_tasks_tui__widgets__input_bar__tests__render_search_bar.snap  vault_tasks_tui__widgets__input_bar__tests__render_search_bar.snap.new  vault_tasks_tui__widgets__input_bar__tests__render_search_bar_line.snap  vault_tasks_tui__widgets__input_bar__tests__render_search_bar_line.snap.new  vault_tasks_tui__widgets__task_list__tests__task_list.snap  vault_tasks_tui__widgets__task_list__tests__task_list.snap.new  vault_tasks_tui__widgets__task_list_item__tests__task_list_item.snap  vault_tasks_tui__widgets__task_list_item__tests__task_list_item.snap.new
vault-tasks/src/: action.rs  cli.rs  components.rs  config.rs  logging.rs  main.rs
vault-tasks/src/components/: explorer_tab.rs  filter_tab.rs  fps.rs
vault-tasks/src/components/snapshots/: vault_tasks__components__home__tests__render_home_component.snap
vault-tasks/src/widgets/: help_menu.rs  input_bar.rs  task_list_item.rs
vault-tasks/src/widgets/snapshots/: vault_tasks__widgets__task_list__tests__render_search_bar.snap
(+56 files in other folders)
