
[workspace.package]
edition = "2024"
repository = "https://github.com/louis-thevenet/vault-tasks"
authors = ["Louis Thevenet <louis.tvnt@gmail.com>"]
license = "MIT"

[profile.dev]

[profile.dev.package]
insta.opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
resolver = "2"
members = [
  "vault-tasks-core",
  "vault-tasks-tui"
]
default-members = [
  "vault-tasks-tui"
]
