
[workspace.package]
edition = "2024"
repository = "https://github.com/louis-thevenet/vault-tasks"
authors = ["Louis Thevenet <louis.tvnt@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across crates
chrono = "0.4.42"
color-eyre = "0.6.5"
config = "0.15.19"
directories = "6.0.0"
lazy_static = "1.5.0"
lexical-sort = "0.3.1"
serde = {version = "1.0.228", features = ["derive"]}
strum = {version = "0.27.2", features = ["derive"]}
strum_macros = "0.27.2"
toml = "0.9.11"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = {version = "0.3.22", features = ["env-filter", "serde"]}
winnow = "0.7.14"

# Build dependencies
anyhow = "1.0.100"
vergen-gix = {version = "1.0.9", features = ["build", "cargo"]}

# Dev dependencies
insta = {version = "1.46.0", features = ["yaml"]}
pretty_assertions = "1.4.1"

[profile.dev]

[profile.dev.package]
insta.opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
resolver = "2"
members = [
  "vault-tasks-core",
  "vault-tasks-tui"
]
default-members = [
  "vault-tasks-tui"
]
