[package]
name = "vault-tasks-cli"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
better-panic = "0.3.0"
clap = {version = "4.5.42", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles"
]}
config = "0.15.13"
crossterm = {version = "0.28.1", features = ["serde", "event-stream"]}
derive_deref = "1.1.1"
directories = "6.0.0"
futures = "0.3.31"
human-panic = "2.0.3"
lazy_static = "1.5.0"
libc = "0.2.174"
ratatui = {version = "0.29.0", features = ["serde", "macros", "widget-calendar"]}
signal-hook = "0.3.18"
strip-ansi-escapes = "0.2.1"
tokio = {version = "1.47.1", features = ["full"]}
tokio-util = "0.7.16"
tracing-error = "0.2.1"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "serde"]}
chrono = {version="0.4.41"}
tui-widget-list = "0.13.2"
tui-input = "0.14.0"
edit = "0.1.5"
tui-scrollview = "=0.5.1"
toml = "0.9.4"
color-eyre = "0.6.5"
serde = {version = "1.0.219", features = ["derive"]}
tracing = "0.1.41"
pretty_assertions = "1.4.1"
strum = {version = "0.27.2", features = ["derive"]}
strum_macros = "0.27.2"
notify-rust = "4.11.7"
lexical-sort = "0.3.1"
winnow = "0.7.12"
time = "0.3.41"
ratskin = "0.2.0"
clap_complete = "4.5.55"
tabled = "0.20.0"
vault-tasks-core = {path = "../vault-tasks-core"}

