[package]
name = "vault-tasks-cli"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
better-panic = "0.3.0"
clap = {version = "4.5.42", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles"
]}
config = "0.15.13"
directories = "6.0.0"
human-panic = "2.0.3"
lazy_static = "1.5.0"
libc = "0.2.174"
strip-ansi-escapes = "0.2.1"
toml = "0.9.4"
color-eyre = "0.6.5"
serde = {version = "1.0.219", features = ["derive"]}
tracing = "0.1.41"
vault-tasks-core = {path = "../vault-tasks-core"}

