[build-dependencies]
anyhow = "1.0.100"
vergen-gix = {version = "1.0.9", features = ["build", "cargo"]}

[dependencies]
config = "0.15.19"
directories = "6.0.0"
lazy_static = "1.5.0"
tracing-error = "0.2.1"
tracing-subscriber = {version = "0.3.20", features = ["env-filter", "serde"]}
chrono = {version="0.4.42"}
toml = "0.9.10"
color-eyre = "0.6.5"
serde = {version = "1.0.228", features = ["derive"]}
tracing = "0.1.43"
pretty_assertions = "1.4.1"
strum = {version = "0.27.2", features = ["derive"]}
strum_macros = "0.27.2"
lexical-sort = "0.3.1"
winnow = "0.7.14"
tabled = "0.20.0"

[dev-dependencies]
insta = {version = "1.44.3", features = ["yaml"]}

[package]
name = "vault-tasks-core"
description = "vault-tasks-core"
categories = ["parsing"]
version = "0.13.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
