[dependencies]
chrono.workspace = true
color-eyre.workspace = true
config.workspace = true
directories.workspace = true
lazy_static.workspace = true
lexical-sort.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
winnow.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true

[package]
name = "vault-tasks-core"
description = "vault-tasks-core"
categories = ["parsing"]
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
