[[bin]]
name = "vault-tasks-tui"
path = "src/main.rs"

[build-dependencies]
anyhow.workspace = true
vergen-gix.workspace = true

[dependencies]
better-panic = "0.3.0"
clap = {version = "4.5.54", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles"
]}
clap_complete = "4.5.65"
chrono.workspace = true
color-eyre.workspace = true
config.workspace = true
crossterm = {version = "0.28.1", features = ["serde", "event-stream"]}
derive_deref = "1.1.1"
directories.workspace = true
edit = "0.1.5"
futures = "0.3.31"
human-panic = "2.0.6"
lazy_static.workspace = true
libc = "0.2.180"
notify-rust = "4.11.7"
pretty_assertions.workspace = true
ratatui = {version = "0.30.0", features = ["serde", "macros", "widget-calendar"]}
ratskin = "0.2.0"
serde.workspace = true
signal-hook = "0.4.1"
strip-ansi-escapes = "0.2.1"
strum.workspace = true
strum_macros.workspace = true
time = "0.3.46"
tokio = {version = "1.49.0", features = ["full"]}
tokio-util = "0.7.18"
toml.workspace = true
tracing.workspace = true
tui-input = "0.14.0"
tui-scrollview = "=0.5.3"
tui-widget-list = "0.13.3"
vault-tasks-core = {path = "../vault-tasks-core"}

[dev-dependencies]
insta.workspace = true

[package]
name = "vault-tasks-tui"
description = "TUI Markdown Task Manager"
build = "build.rs"
categories = ["command-line-utilities", "visualization"]
keywords = ["markdown", "task-manager", "productivity", "tui", "obsidian"]
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
