[[bin]]
name = "vault-tasks"
path = "src/main.rs"

[build-dependencies]
anyhow = "1.0.91"
vergen-gix = {version = "1.0.2", features = ["build", "cargo"]}

[dependencies]
vault-tasks-core = {path = "../vault-tasks-core", version = "0.5.0"}
better-panic = "0.3.0"
clap = {version = "4.5.20", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles"
]}
config = "0.14.1"
crossterm = {version = "0.28.1", features = ["serde", "event-stream"]}
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.31"
human-panic = "2.0.2"
lazy_static = "1.5.0"
libc = "0.2.161"
ratatui = {version = "0.29.0", features = ["serde", "macros"]}
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
tokio = {version = "1.41.0", features = ["full"]}
tokio-util = "0.7.12"
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "serde"]}
chrono = "0.4.38"
tui-widget-list = "0.13.0"
tui-input = "0.11.0"
edit = "0.1.5"
tui-scrollview = "=0.5.0"
toml = "0.8.19"
color-eyre.workspace = true
pretty_assertions .workspace = true
serde.workspace = true
strum.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true

[package]
name = "vault-tasks"
description = "TUI Markdown Task Manager"
build = "build.rs"
categories = ["command-line-utilities", "visualization"]
keywords = ["markdown", "task-manager", "productivity", "tui", "obsidian"]
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
